--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 
         .promos-inquiries {
             background-color: #ededed;
+            outline: 3px solid #000000;
+
         }
 
         .lead {
@@ -142,16 +144,16 @@
     <!--Banner Section -->
     <div class="banner d-flex align-items-center justify-content-center text-center rounded-5 mb-5 mt-5" id="banner">
         <div class="container mt-5">
-            <h1 class="display-4 fw-bold white";>
+            <h1 class="display-4 fw-bold white" ;>
                 Canon Interchangeable Lens Camera
             </h1>
-            <p class="lead text-white" >Experience photography like never
+            <p class="lead text-white">Experience photography like never
                 before.</p>
         </div>
     </div>
 
     <!--Overview Section-->
-<div id="overview" class="container-fluid overview my-5 py-5 mt-5">
+    <div id="overview" class="container-fluid overview my-5 py-5 mt-5">
         <div class="row align-items-center">
             <div class="col-md-6 text-center">
                 <img src="assets/cam1.png" class="img-fluid d-inline w-90" alt="Canon EOS R10" ;>
@@ -165,7 +167,8 @@
                 </p>
                 <p class="fst-italic">
                     Whether you're an aspiring photographer or a content creator on the move,
-                    the R10 combines portability <br> with power — giving you the edge to capture every shot with clarity and
+                    the R10 combines portability <br> with power — giving you the edge to capture every shot with
+                    clarity and
                     style.
                 </p>
                 <p class="fw-bold fs-5 fst-italic pt-4 text-uppercase">
@@ -180,7 +183,8 @@
     <div id="product-details" class="container my-5">
         <div class="text-center mb-5">
             <h2 class="fw-bold display-4">Product Details</h2>
-            <p class="text-muted fst-italic fs-5">Explore the key features and technical specifications of the Canon EOS R10.</p>
+            <p class="text-muted fst-italic fs-5">Explore the key features and technical specifications of the Canon EOS
+                R10.</p>
         </div>
     </div>
 
@@ -189,18 +193,23 @@
             <div class="row align-items-center g-5">
 
                 <div class="col-md-6 px-4 mb-4 mb-md-0">
-                    <p class="fs-6 fst-italic">Capture fast-moving subjects with up to 15 fps continuous shooting, ensuring
+                    <p class="fs-6 fst-italic">Capture fast-moving subjects with up to 15 fps continuous shooting,
+                        ensuring
                         you never miss a moment.</p>
-                    <p class="fs-6 fst-italic">Experience minimal lag and blackout during shooting, thanks to the advanced
+                    <p class="fs-6 fst-italic">Experience minimal lag and blackout during shooting, thanks to the
+                        advanced
                         electronic shutter.</p>
-                    <p class="fs-6 fst-italic">Discover endless creative possibilities with the compact and lightweight EOS
+                    <p class="fs-6 fst-italic">Discover endless creative possibilities with the compact and lightweight
+                        EOS
                         R10.</p>
                     <p class="fs-6 fst-italic">Featuring a 24.2MP APS-C CMOS sensor built on the advanced RF mount.</p>
-                    <p class="fs-6 fst-italic">It delivers a 1.6x telephoto advantage while maintaining exceptional image
+                    <p class="fs-6 fst-italic">It delivers a 1.6x telephoto advantage while maintaining exceptional
+                        image
                         clarity.</p>
                     <p class="fs-6 fst-italic">This mirrorless camera allows continuous shooting of up to 23 frames per
                         second.</p>
-                    <p class="fs-6 fst-italic">It also supports stunning 4K UHD recording, including 6K oversampling and 4K
+                    <p class="fs-6 fst-italic">It also supports stunning 4K UHD recording, including 6K oversampling and
+                        4K
                         60p.</p>
                 </div>
 
@@ -345,20 +354,21 @@
                 <footer class="container-fluid text-center py-4 mt-5">
                     <div class="container">
                         <div class="fw-bold display-5">Contact Us</div>
-                            <p class="fs-6 mt-4"><span>Email:</span> support@shetech.com</p>
-                            <p class="fs-6 mt-4"><span>Phone:</span> +1 (555) 123-4567</p>
-                            <p class="fs-6 mt-4"><span>Link:</span> www.shetech.com</p>
-                            <p class="fs-6 mt-4"><span>Social:</span> facebook.com/shetech | twitter.com/shetech | instagram.com/shetech
-                            </p>
-                        </div>
+                        <p class="fs-6 mt-4"><span>Email:</span> support@shetech.com</p>
+                        <p class="fs-6 mt-4"><span>Phone:</span> +1 (555) 123-4567</p>
+                        <p class="fs-6 mt-4"><span>Link:</span> www.shetech.com</p>
+                        <p class="fs-6 mt-4"><span>Social:</span> facebook.com/shetech | twitter.com/shetech |
+                            instagram.com/shetech
+                        </p>
+                    </div>
 
-                        <div class="container-fluid mt-4 pt-4 border-top border-dark">
-                            <div class="row">
-                                <div class="col">
-                                    <p class="mb-0">&copy; 2025 SheTech. All rights reserved.</p>
-                                </div>
+                    <div class="container-fluid mt-4 pt-4 border-top border-dark">
+                        <div class="row">
+                            <div class="col">
+                                <p class="mb-0">&copy; 2025 SheTech. All rights reserved.</p>
                             </div>
                         </div>
+                    </div>
                 </footer>
 
                 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
